client/public/views/styles/homepage.css
:root {
  --accent: #d9d0c7;
  --background: #f4f3f7;
  --text: #2c2c2c;
  --darkbackground: #415a77;
  --accentLogo: #bdbbb6;
  --min-window-height: 800px;
  --min-window-width: 600px;
}

@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&display=swap');

body {
  color: #2c2c2c;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  height: 100%;
  margin: 0;
  overflow: auto;
  overflow-x: hidden;
  padding: 0;
  scroll-snap-type: y mandatory;
  width: 100%;
  background-color: var(--background);
}

body p {
  font-family: 'Baloo Bhaijaan 2', sans-serif;
}

.dark body {
  color: white;
}

html {
  height: 100%;
  overflow: hidden;
  scroll-snap-align: start;
  scroll-snap-type: y mandatory;
  width: 100%;
  overflow-x: hidden;
}

img.arrow {
  filter: brightness(0) saturate(0);
}

img.arrow.dark {
  filter: brightness(100) saturate(0);
}

.animate-bounce-in-top {
  animation: bounce-in-top 2s both;
}

.boxContainer {
  animation: slideUp 2.5s ease-out forwards 1.5s;
  box-shadow: 5px 5px 15px 0.5rem rgb(53, 53, 53);
  display: flex;
  flex-direction: column;
  font-size: 65px;
  z-index: 1;
}

.container {
  width: 90vw;
  margin-right: 5%;
  overflow: hidden;
}

.containerLeft,
.containerRight {
  display: flex;
  flex-direction: column;
  padding-bottom: 2%;
}

.containerLeft {
  /* align-content: space-around; */
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 25%;
}

.containerMain {
  display: flex;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  height: 80vh;
  width: 90vw;
  overflow: hidden;
}

.containerRight {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  visibility: hidden;
  width: 70%;
}

.floater {
  align-items: center;
  display: flex;
  font-size: 2.5rem;
  justify-content: flex-end;
  padding-right: 20px;
  position: fixed;
  right: 10px;
  top: 15px;
  z-index: 10;
}

.instruction {
  align-items: center;
  background-color: var(--background);
  border-radius: 2px;
  box-shadow: 3px 5px 5px -3px rgba(44, 44, 44, 1);
  color: var(--text);
  cursor: pointer;
  display: flex;
  /* flex: 1; */
  font-size: large;
  font-weight: bolder;
  height: 100%;
  justify-content: flex-start;
  margin-top: 5%;
  padding-right: 10px;
  padding-left: 5px;
  position: relative;
  /* padding-bottom: 5px; */
  /* text-align: center; */
  transition: transform 250ms ease;
  width: 100%;
}

.instruction.active {
  font-size: x-large;
  display: block;
  /* align-items: flex-start;
  justify-content: flex-start; */
}

.instructiontext {
  font-size: large;
  display: none;
}

.instructiontext.active {
  display: block;
}

.instructiontext.active.dark {
  display: block;
  background-color: var(--darkbackground);
}

.instruction::before {
  /* content: '';
  display: block;
  width: 0;
  height: 3px;
  background-color: var(--accent);
  transition: width 0.5s ease-out;
  position: absolute;
  bottom: 0;
  left: 0;
  visibility: visible;
  opacity: 1; */
  content: '';
  display: block;
  width: 0;
  height: 6px;
  position: absolute;
  bottom: 0;
  left: 0;
  visibility: visible;
  opacity: 1;
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 0.8) 0%,
    var(--accentLogo) 50%,
    var(--accentLogo) 100%
  );
  background-size: 200% 100%;
  background-position: right bottom;
  transition: width 0.5s ease-out, background-position 4s ease;
  filter: blur(1px);
}

.instruction.active::before {
  width: 100%;
  transition: width 4s ease;
  visibility: visible;
  opacity: 1;
  background-position: left bottom;
}

.instruction:hover {
  transform: translateY(-5px);
}

.instruction.dark {
  background-color: #415a77;
  color: white;
}

.instruction.active.dark::before {
  background-color: #415a77;
  color: white;
}

.link-container {
  display: flex;
  gap: 10px;
  justify-content: center;
  width: 20%;
}

.logo,
.logo2,
.logo3 {
  filter: drop-shadow(2px 2px 3px #2a2a2a);
}

.logo {
  animation: rotate-in-ver 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo2 {
  animation: rotate-in-ver2 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo3 {
  animation: rotate-in-ver3 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo-container {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.logo-letters {
  filter: drop-shadow(2px 2px 3px #2a2a2a);
}

.logo-letters.dark {
  filter: drop-shadow(2px 2px 3px #2a2a2a);
}

.profile {
  align-items: center;
  display: flex;
  flex-direction: column;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  margin-bottom: 5%;
  text-align: center;
}

.profile-name {
  margin-bottom: 5px;
  font-size: larger;
}

.profile-photos {
  border-radius: 50%;
  height: 10vw;
  margin-bottom: 1%;
  object-fit: cover;
  width: 10vw;
}

.profiles-container {
  display: flex;
  flex-wrap: wrap;
  width: 70vw;
  /* gap: 100px; */
  justify-content: space-between;
  animation: slideUp 2.5s ease-out forwards 1.5s;
}

.slide {
  align-items: center;
  display: flex;
  height: 100vh;
  justify-content: center;
  scroll-snap-align: start;
  width: 100%;
  /* margin-bottom: 5%; */
  margin-right: 5%;
}

.slide:nth-child(1),
.slide:nth-child(2),
.slide:nth-child(3) {
  background-color: var(--background);
}

.slide:nth-child(3) {
  flex-direction: column;
}

.slide:nth-child(1).dark,
.slide:nth-child(2).dark,
.slide:nth-child(3).dark {
  background-color: var(--darkbackground);
}

.slidePage2 {
  animation: fadeInUp 1.5s;
  border-radius: 2px;
  box-shadow: 3px 5px 5px -3px rgba(44, 44, 44, 1);
  display: block;
  height: 100%;
  margin-left: 10%;
  padding: 20px;
  width: 100%;
}

.slidePage2.active {
  display: block;
  opacity: 1;
}

.slide2_Background {
  animation: slideUp 3.5s ease-out forwards 1.5s;
  font-size: 65px;
  position: relative;
  z-index: 1;
}

.team-header {
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  font-size: 4vw;
  margin-bottom: 10vh;
  text-align: center;
  width: 100%;
}
/* ... */

